# jlearngl

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
buildSrc/src/main/groovy/: platform-application.gradle
gradle/wrapper/: gradle-wrapper.properties
learngl/getting_started/01_window/: build.gradle
learngl/getting_started/02_triangle/: build.gradle
learngl/getting_started/02_triangle/src/main/resources/shaders/: fragment.glsl  vertex.glsl
learngl/getting_started/03_shaders/: build.gradle
learngl/getting_started/03_shaders/src/main/resources/shaders/: fragment.glsl
learngl/getting_started/04_texture_samplers/: build.gradle
learngl/getting_started/04_texture_samplers/src/main/resources/shaders/: fragment.glsl
learngl/getting_started/04_textures/: build.gradle
learngl/getting_started/04_textures/src/main/resources/shaders/: fragment.glsl  vertex.glsl
learngl/getting_started/05_transformations/: build.gradle
learngl/getting_started/05_transformations/src/main/resources/shaders/: fragment.glsl  vertex.glsl
learngl/getting_started/06_coordinate_systems/: build.gradle
learngl/getting_started/06_coordinate_systems/src/main/resources/shaders/: vertex.glsl
math/: build.gradle
math/mathematica-notebooks/: game math.nb
platform/: README.md  build.gradle
platform-processor/: build.gradle
platform/native/platform/: CMakeLists.txt
platform/native/platform/src/: common.h  constants.h  glfw3_wrapper.c  glfw3_wrapper.h  glwrap.c  glwrap.h  platform.c  platform.h  stbwrap.c  stbwrap.h
(+95 files in other folders)
